# synergy-network

./: AGENTS.md  CONTRIBUTING.md  index.html  project-file-tree.txt  updates.md
01-testnet/synergy-testnet-explorer/backend/: Cargo.toml  Dockerfile
01-testnet/synergy-testnet-explorer/backend/src/: api.rs  indexer.rs  main.rs  models.rs
01-testnet/synergy-testnet-explorer/backend/src/db/: db.rs  mod.rs
01-testnet/synergy-testnet-explorer/backend/src/handlers/: mod.rs
01-testnet/synergy-testnet-explorer/backend/src/routes/: mod.rs
01-testnet/synergy-testnet-main/: Cargo.toml  LICENSE
01-testnet/synergy-testnet-main/config/: genesis.json  node_config.toml  token_metadata.json
01-testnet/synergy-testnet-main/dependencies/: package.json
01-testnet/synergy-testnet-main/docs/: README.md  setup-guide.md
01-testnet/synergy-testnet-main/scripts/: start-testnet.sh
01-testnet/synergy-testnet-main/src/: block.rs  broadcast.rs  contracts.rs  main.rs  transaction.rs
01-testnet/synergy-testnet-main/src/config/: mod.rs
01-testnet/synergy-testnet-main/src/consensus/: consensus_algorithm.rs
01-testnet/synergy-testnet-main/src/node/: mod.rs
01-testnet/synergy-testnet-main/src/p2p/: networking.rs
01-testnet/synergy-testnet-main/src/rpc/: rpc_server.rs
01-testnet/synergy-testnet-main/tests/: test_rpc_server.rs  test_transactions.rs
03-documentation/: .~lock.Synergy Network Address Formatting.docx#  .~lock.Synergy Network Address Formatting.odt#  ARTICLES OF ORGANIZATION.docx  Business Model Document.docx  DAO Constitution.docx  Developer API Documentation.docx  (+33 more)
(+505 files in other folders)
