[package]
name = "synergy-testnet"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-http-server = "18.0.0"
libp2p = "0.55.0"
rocksdb = "0.23.0"
tokio = { version = "1.43.0", features = ["full"] }
md5 = "0.7.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
bincode = "2.0.1"
rmp-serde = "1.3.0"
serde_cbor = "0.11.2"
hex = "0.4.3"
base64 = "0.22.1"
serde_yaml = "0.9.34"
blake3 = "1.8.1"
k256 = { version = "0.13", features = ["sha256"] }
chrono = "0.4"
sha3 = "0.10"
lazy_static = "1.4"




[lib]
name = "synergy_testnet"
path = "src/lib.rs"
