[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "time",
  "json",
  "chrono",
  "runtime-tokio-native-tls",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
time = { version = "0.3.37", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

[[bin]]
name = "backend"
path = "src/main.rs"
